Traduce entradas fuzzy sin issues en c-api
Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/c-api/contextvars.po
+++ b/c-api/contextvars.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-16 17:54+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:23+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/contextvars.rst:6
 msgid "Context Variables Objects"
@@ -156,7 +157,6 @@ msgid "Context variable functions:"
 msgstr "Funciones variables de contexto:"
 
 #: ../Doc/c-api/contextvars.rst:109
-#, fuzzy
 msgid ""
 "Create a new ``ContextVar`` object.  The *name* parameter is used for "
 "introspection and debug purposes.  The *def* parameter specifies a default "
@@ -164,9 +164,10 @@ msgid ""
 "occurred, this function returns ``NULL``."
 msgstr ""
 "Crea un nuevo objeto ``ContextVar``. El parámetro *name* se usa para "
-"propósitos de introspección y depuración. El parámetro *def* puede "
-"especificar opcionalmente el valor predeterminado para la variable de "
-"contexto. Si se ha producido un error, esta función retorna ``NULL``."
+"propósitos de introspección y depuración. El parámetro *def* especifica el "
+"valor predeterminado para la variable de contexto, o ``NULL`` para no "
+"especificar un valor predeterminado. Si se ha producido un error, esta "
+"función retorna ``NULL``."
 
 #: ../Doc/c-api/contextvars.rst:116
 msgid ""
@@ -199,19 +200,16 @@ msgid "``NULL``"
 msgstr "``NULL``"
 
 #: ../Doc/c-api/contextvars.rst:127
-#, fuzzy
 msgid "Except for ``NULL``, the function returns a new reference."
-msgstr "Si se encontró el valor, la función creará una nueva referencia a él."
+msgstr "A excepción de ``NULL``, la función retorna una nueva referencia."
 
 #: ../Doc/c-api/contextvars.rst:131
-#, fuzzy
 msgid ""
 "Set the value of *var* to *value* in the current context.  Returns a new "
 "token object for this change, or ``NULL`` if an error has occurred."
 msgstr ""
 "Establece el valor de *var* en *value* en el contexto actual. Retorna un "
-"puntero a un objeto :c:type:`PyObject`, o ``NULL`` si se ha producido un "
-"error."
+"nuevo objeto token para este cambio, o ``NULL`` si se ha producido un error."
 
 #: ../Doc/c-api/contextvars.rst:136
 msgid ""
