--- a/c-api/intro.po
+++ b/c-api/intro.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 01:28+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:48+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/intro.rst:8
 msgid "Introduction"
@@ -556,7 +557,6 @@ msgid "Reference Count Details"
 msgstr "Detalles del conteo de referencia"
 
 #: ../Doc/c-api/intro.rst:318
-#, fuzzy
 msgid ""
 "The reference count behavior of functions in the Python/C API is best  "
 "explained in terms of *ownership of references*.  Ownership pertains to "
@@ -579,13 +579,14 @@ msgstr ""
 "responsable de llamar a ``Py_DECREF`` cuando ya no se necesita la "
 "referencia. La propiedad también se puede transferir, lo que significa que "
 "el código que recibe la propiedad de la referencia se hace responsable de "
-"eventualmente decretarla llamando a :c:func:`Py_DECREF` o :c:func:"
-"`Py_XDECREF` cuando ya no es necesario --- o transmitir esta responsabilidad "
-"(generalmente a la persona que llama). Cuando una función transfiere la "
-"propiedad de una referencia a su llamador, se dice que el que llama recibe "
-"una *nueva* referencia. Cuando no se transfiere ninguna propiedad, se dice "
-"que la persona que llama *toma prestada* la referencia. No es necesario "
-"hacer nada para obtener una referencia prestada."
+"eventualmente disminuirla llamando a :c:func:`Py_DECREF` o :c:func:"
+"`Py_XDECREF` cuando ya no es necesario --- o transmitiendo esta "
+"responsabilidad (generalmente a la persona que llama). Cuando una función "
+"transfiere la propiedad de una referencia a su llamador, se dice que el que "
+"llama recibe una *nueva* referencia. Cuando no se transfiere ninguna "
+"propiedad, se dice que la persona que llama *toma prestada* la referencia. "
+"No es necesario hacer nada para obtener una  :term:`referencia prestada "
+"<borrowed reference>`."
 
 #: ../Doc/c-api/intro.rst:331
 msgid ""
@@ -1094,7 +1095,6 @@ msgstr ""
 "las compilaciones más utilizadas se describirán en el resto de esta sección."
 
 #: ../Doc/c-api/intro.rst:744
-#, fuzzy
 msgid ""
 "Compiling the interpreter with the :c:macro:`Py_DEBUG` macro defined "
 "produces what is generally meant by :ref:`a debug build of Python <debug-"
@@ -1105,24 +1105,23 @@ msgid ""
 "disabled."
 msgstr ""
 "Compilar el intérprete con el macro :c:macro:`Py_DEBUG` definido produce lo "
-"que generalmente se entiende por \"una compilación de depuración\" de "
-"Python. :c:macro:`Py_DEBUG` se habilita en la compilación de Unix agregando "
-"``--with-pydebug`` al comando :file:`./configure`. También está implícito en "
-"la presencia del macro no específico de Python :c:macro:`_DEBUG`. Cuando :c:"
-"macro:`Py_DEBUG` está habilitado en la compilación de Unix, la optimización "
-"del compilador está deshabilitada."
+"que generalmente se entiende por :ref:`una compilación de depuración de "
+"Python <debug-build>`. :c:macro:`Py_DEBUG` se habilita en la compilación de "
+"Unix agregando :option:`--with-pydebug` al comando :file:`./configure`. "
+"También está implícito en la presencia del macro no específico de Python :c:"
+"macro:`_DEBUG`. Cuando :c:macro:`Py_DEBUG` está habilitado en la compilación "
+"de Unix, la optimización del compilador está deshabilitada."
 
 #: ../Doc/c-api/intro.rst:752
-#, fuzzy
 msgid ""
 "In addition to the reference count debugging described below, extra checks "
 "are performed, see :ref:`Python Debug Build <debug-build>`."
 msgstr ""
 "Además de la depuración del recuento de referencia que se describe a "
-"continuación, se realizan las siguientes verificaciones adicionales:"
+"continuación, se realizan verificaciones adicionales, véase :ref:"
+"`compilaciones de depuración <debug-build>`."
 
 #: ../Doc/c-api/intro.rst:755
-#, fuzzy
 msgid ""
 "Defining :c:macro:`Py_TRACE_REFS` enables reference tracing (see the :option:"
 "`configure --with-trace-refs option <--with-trace-refs>`). When defined, a "
@@ -1131,13 +1130,13 @@ msgid ""
 "well.  Upon exit, all existing references are printed.  (In interactive mode "
 "this happens after every statement run by the interpreter.)"
 msgstr ""
-"Definiendo :c:macro:`Py_TRACE_REFS` habilita el rastreo de referencias. "
+"Definiendo :c:macro:`Py_TRACE_REFS` habilita el rastreo de referencias "
+"(véase la opción :option:`configure --with-trace-refs <--with-trace-refs>`). "
 "Cuando se define, se mantiene una lista circular doblemente vinculada de "
 "objetos activos al agregar dos campos adicionales a cada :c:type:`PyObject`. "
 "También se realiza un seguimiento de las asignaciones totales. Al salir, se "
 "imprimen todas las referencias existentes. (En modo interactivo, esto sucede "
-"después de cada declaración ejecutada por el intérprete). Implicado por :c:"
-"macro:`Py_DEBUG`."
+"después de cada declaración ejecutada por el intérprete)."
 
 #: ../Doc/c-api/intro.rst:762
 msgid ""
