--- a/c-api/reflection.po
+++ b/c-api/reflection.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 20:24+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:32+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/reflection.rst:6
 msgid "Reflection"
@@ -67,12 +68,11 @@ msgid "Get the *frame* next outer frame."
 msgstr "Obtiene el *frame* siguiente marco (*frame*) exterior."
 
 #: ../Doc/c-api/reflection.rst:38
-#, fuzzy
 msgid ""
 "Return a :term:`strong reference`, or ``NULL`` if *frame* has no outer frame."
 msgstr ""
-"Devuelve una referencia fuerte o ``NULL`` si *frame* no tiene un marco "
-"exterior."
+"Devuelve una :term:`referencia fuerte <strong reference>` o ``NULL`` si "
+"*frame* no tiene un marco exterior."
 
 #: ../Doc/c-api/reflection.rst:40 ../Doc/c-api/reflection.rst:60
 msgid "*frame* must not be ``NULL``."
@@ -83,9 +83,8 @@ msgid "Get the *frame* code."
 msgstr "Obtiene el código *frame*."
 
 #: ../Doc/c-api/reflection.rst:49
-#, fuzzy
 msgid "Return a :term:`strong reference`."
-msgstr "Retorna una referencia fuerte."
+msgstr "Retorna una :term:`referencia fuerte <strong reference>`."
 
 #: ../Doc/c-api/reflection.rst:51
 msgid ""
