--- a/c-api/sys.po
+++ b/c-api/sys.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-26 20:21+0200\n"
-"Last-Translator: Diego Cristóbal Herreros <diecristher@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:56+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -215,7 +215,6 @@ msgstr ""
 "configurada: véase la función :c:func:`Py_PreInitialize`."
 
 #: ../Doc/c-api/sys.rst:130
-#, fuzzy
 msgid ""
 "Decode a byte string from the :term:`filesystem encoding and error handler`. "
 "If the error handler is :ref:`surrogateescape error handler "
@@ -224,12 +223,13 @@ msgid ""
 "character, the bytes are escaped using the surrogateescape error handler "
 "instead of decoding them."
 msgstr ""
-"Decodifica una cadena de bytes de la codificación de configuración regional "
-"con :ref:`controlador de error de subrogateescape <surrogateescape>`: los "
-"bytes no codificables se decodifican como caracteres en el rango U+DC80..U"
-"+DCFF. Si una secuencia de bytes se puede decodificar como un carácter "
-"sustituto, escape los bytes usando el controlador de error de escape "
-"sustituto en lugar de decodificarlos."
+"Decodifica una cadena de bytes a partir del :term:`manejador de codificación "
+"y errores del sistema de archivos <filesystem encoding and error handler>`. "
+"Si el controlador de error es el :ref:`controlador de error surrogateescape "
+"<surrogateescape>`, los bytes no codificables se decodifican como caracteres "
+"en el rango U+DC80..U+DCFF; y si una secuencia de bytes se puede decodificar "
+"como un carácter sustituto, escape los bytes usando el controlador de error "
+"surrogateescape en lugar de decodificarlos."
 
 #: ../Doc/c-api/sys.rst:137
 msgid ""
@@ -287,11 +287,12 @@ msgstr ""
 "`PyUnicode_DecodeLocaleAndSize`."
 
 #: ../Doc/c-api/sys.rst:162 ../Doc/c-api/sys.rst:204
-#, fuzzy
 msgid ""
 "The function now uses the UTF-8 encoding in the :ref:`Python UTF-8 Mode "
 "<utf8-mode>`."
-msgstr "La función utiliza la codificación UTF-8 en el modo Python UTF-8."
+msgstr ""
+"La función ahora utiliza la codificación UTF-8 en el :ref:`Modo Python UTF-8 "
+"<utf8-mode>`."
 
 #: ../Doc/c-api/sys.rst:166 ../Doc/c-api/sys.rst:208
 msgid ""
