--- a/c-api/complex.po
+++ b/c-api/complex.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 20:16+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:18+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/complex.rst:6
 msgid "Complex Number Objects"
@@ -81,13 +82,12 @@ msgstr ""
 "C :c:type:`Py_complex`."
 
 #: ../Doc/c-api/complex.rst:51
-#, fuzzy
 msgid ""
 "Return the negation of the complex number *num*, using the C :c:type:"
 "`Py_complex` representation."
 msgstr ""
-"Retorna la negación del número complejo *complex*, utilizando la "
-"representación C :c:type:`Py_complex`."
+"Retorna la negación del número complejo *num*, utilizando la representación "
+"C :c:type:`Py_complex`."
 
 #: ../Doc/c-api/complex.rst:57
 msgid ""
