--- a/c-api/conversion.po
+++ b/c-api/conversion.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 01:41+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:24+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/conversion.rst:6
 msgid "String conversion and formatting"
@@ -64,7 +65,6 @@ msgstr ""
 "(*corner cases*), que las funciones del Estándar C no hacen."
 
 #: ../Doc/c-api/conversion.rst:28
-#, fuzzy
 msgid ""
 "The wrappers ensure that ``str[size-1]`` is always ``'\\0'`` upon return. "
 "They never write more than *size* bytes (including the trailing ``'\\0'``) "
@@ -73,8 +73,8 @@ msgid ""
 msgstr ""
 "Las envolturas aseguran que ``str[size-1]`` sea siempre ``'\\0'`` al "
 "retornar. Nunca se escriben más de *size* bytes (incluido el ``'\\0'`` del "
-"final) en *str*. Ambas funciones requieren que ``str != NULL``, ``size > 0`` "
-"y ``format != NULL``."
+"final) en *str*. Ambas funciones requieren que ``str != NULL``, ``size > "
+"0``, ``format != NULL`` y ``size < INT_MAX``."
 
 #: ../Doc/c-api/conversion.rst:33
 msgid ""
