--- a/c-api/descriptor.po
+++ b/c-api/descriptor.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2020-05-09 03:08+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-12-09 10:58+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/descriptor.rst:6
 msgid "Descriptor Objects"
@@ -38,12 +39,11 @@ msgid "The type object for the built-in descriptor types."
 msgstr "El objeto de tipo para los tipos de descriptor incorporado."
 
 #: ../Doc/c-api/descriptor.rst:35
-#, fuzzy
 msgid ""
 "Return non-zero if the descriptor objects *descr* describes a data "
 "attribute, or ``0`` if it describes a method.  *descr* must be a descriptor "
 "object; there is no error checking."
 msgstr ""
-"Retorna verdadero si el descriptor objetos *descr* describe un atributo de "
-"datos, o falso si describe un método. *descr* debe ser un objeto descriptor; "
-"No hay comprobación de errores."
+"Retorna distinto de cero si el descriptor objetos *descr* describe un "
+"atributo de datos, o ``0`` si describe un método. *descr* debe ser un objeto "
+"descriptor; no hay comprobación de errores."
