--- a/c-api/function.po
+++ b/c-api/function.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-25 10:42+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:29+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -105,14 +105,13 @@ msgstr ""
 "*__module__* del objeto función *op*. Puede ser *NULL*."
 
 #: ../Doc/c-api/function.rst:67
-#, fuzzy
 msgid ""
 "This is normally a string containing the module name, but can be set to any "
 "other object by Python code."
 msgstr ""
-"Retorna el atributo *__module__* del objeto función *op*. Normalmente es una "
-"cadena de caracteres que contiene el nombre del módulo, pero se puede "
-"establecer en cualquier otro objeto mediante el código Python."
+"Éste es normalmente una cadena de caracteres que contiene el nombre del "
+"módulo, pero se puede establecer en cualquier otro objeto mediante código "
+"Python."
 
 #: ../Doc/c-api/function.rst:73
 msgid ""
