--- a/c-api/set.po
+++ b/c-api/set.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-01 20:10+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:57+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/c-api/set.rst:6
 msgid "Set Objects"
@@ -121,13 +122,12 @@ msgstr ""
 "con éxito."
 
 #: ../Doc/c-api/set.rst:70
-#, fuzzy
 msgid ""
 "Return true if *p* is a :class:`set` object but not an instance of a "
 "subtype.  This function always succeeds."
 msgstr ""
-"Retorna verdadero si *p* es un objeto :class:`frozenset` pero no una "
-"instancia de un subtipo. Esta función siempre finaliza con éxito."
+"Retorna verdadero si *p* es un objeto :class:`set` pero no una instancia de "
+"un subtipo. Esta función siempre finaliza con éxito."
 
 #: ../Doc/c-api/set.rst:77
 msgid ""
