--- a/c-api/veryhigh.po
+++ b/c-api/veryhigh.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-10-22 07:02+0200\n"
-"Last-Translator: Diego Cristóbal Herreros <diecristher@gmail.com>\n"
+"PO-Revision-Date: 2021-12-09 10:55+0800\n"
+"Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -231,7 +231,6 @@ msgstr ""
 "más abajo, dejando *flags* establecido a ``NULL``."
 
 #: ../Doc/c-api/veryhigh.rst:132
-#, fuzzy
 msgid ""
 "Read and execute a single statement from a file associated with an "
 "interactive device according to the *flags* argument.  The user will be "
@@ -240,8 +239,9 @@ msgid ""
 msgstr ""
 "Lee y ejecuta declaraciones de un archivo asociado con un dispositivo "
 "interactivo de acuerdo al argumento *flags*. Se le solicitará al usuario "
-"usando ``sys.ps1`` y ``sys.ps2``. *filename* se decodifica a partir de la "
-"codificación del sistema de archivos (:func:`sys.getfilesystemencoding`)."
+"usando ``sys.ps1`` y ``sys.ps2``. *filename* se decodifica a partir del :"
+"term:`manejador de codificación y errores del sistema de archivos "
+"<filesystem encoding and error handler>`."
 
 #: ../Doc/c-api/veryhigh.rst:137
 msgid ""
@@ -266,7 +266,6 @@ msgstr ""
 "más abajo, dejando *flags* establecido a ``NULL``."
 
 #: ../Doc/c-api/veryhigh.rst:152
-#, fuzzy
 msgid ""
 "Read and execute statements from a file associated with an interactive "
 "device until EOF is reached.  The user will be prompted using ``sys.ps1`` "
@@ -275,9 +274,9 @@ msgid ""
 msgstr ""
 "Lee y ejecuta declaraciones de un archivo asociado con un dispositivo "
 "interactivo hasta llegar al EOF. Se le solicitará al usuario usando ``sys."
-"ps1`` y ``sys.ps2``. *filename* se decodifica a partir de la codificación "
-"del sistema de archivos (:func:`sys.getfilesystemencoding`). Retorna ``0`` "
-"en EOF o un número negativo en caso de falla."
+"ps1`` y ``sys.ps2``.*filename* se decodifica a partir del :term:`manejador "
+"de codificación y errores del sistema de archivos <filesystem encoding and "
+"error handler>`. Retorna ``0`` en EOF o un número negativo en caso de falla."
 
 #: ../Doc/c-api/veryhigh.rst:160
 msgid ""
@@ -455,14 +454,13 @@ msgstr ""
 "también se eliminan) )"
 
 #: ../Doc/c-api/veryhigh.rst:266
-#, fuzzy
 msgid ""
 "Like :c:func:`Py_CompileStringObject`, but *filename* is a byte string "
 "decoded from the :term:`filesystem encoding and error handler`."
 msgstr ""
 "Como :c:func:`Py_CompileStringObject`, pero *filename* es una cadena de "
-"caracteres de byte decodificado desde la codificación del sistema de "
-"archivos (:func:`os.fsdecode`)."
+"bytes decodificada a partir del :term:`manejador de codificación y errores "
+"del sistema de archivos <filesystem encoding and error handler>`."
 
 #: ../Doc/c-api/veryhigh.rst:273
 msgid ""
