arreglando problemas CI

--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -1239,8 +1239,9 @@ msgid ""
 "deleting the :const:`__debug__` constant.  (Contributed by Dong-hee Na in :"
 "issue:`45000`.)"
 msgstr ""
-"Un :exc:`SyntaxError` (en lugar de una constante :exc:"
-"`NameErrorASDF00debug__`. (Contribuido por Dong-hee Na en :issue:`45000`)."
+"Un :exc:`SyntaxError` (en lugar de una constante :exc:`NameError`) se "
+"lanzara cuando se elimine la constante :const:`__debug__`. (Contribuido por "
+"Dong-hee Na en :issue:`45000`)."
 
 #: ../Doc/whatsnew/3.10.rst:882
 msgid ""
@@ -1773,10 +1774,10 @@ msgid ""
 "(Contributed by Tal Einat in bpo-44010.)"
 msgstr ""
 "Resalte el nuevo :ref:`soft keywords <soft-keywords>` :keyword:`match`, :"
-"keyword:`case <match>ASDF00 <wildcard-patterns>` en declaraciones de "
-"coincidencia de patrones. Sin embargo, este resaltado no es perfecto y será "
-"incorrecto en algunos casos raros, incluidos algunos ``_``-s en patrones "
-"``case``. (Contribuido por Tal Einat en bpo-44010.)"
+"keyword:`case <match>`, y :keyword:`_ <wildcard-patterns>` en declaraciones "
+"de coincidencia de patrones. Sin embargo, este resaltado no es perfecto y "
+"será incorrecto en algunos casos raros, incluidos algunos ``_``-s en "
+"patrones ``case``. (Contribuido por Tal Einat en bpo-44010.)"
 
 #: ../Doc/whatsnew/3.10.rst:1168
 msgid "importlib.metadata"
@@ -2884,8 +2885,9 @@ msgstr ""
 "en ejecución y no se pasa ningún argumento *loop* explícito: :func:`~asyncio."
 "ensure_future`, :func:`~asyncio.wrap_future`, :func:`~asyncio.gather`, :func:"
 "`~asyncio.shield`, :func:`~asyncio.as_completed` y constructores de :class:"
-"`~asyncio.Future`, :class:`~asyncio.Task`, :class:`~asyncio."
-"StreamReaderProtocol`., (Contribuido por Serhiy Storchaka en :issue:`39529`.)"
+"`~asyncio.Future`, :class:`~asyncio.Task`, :class:`~asyncio.StreamReader`, :"
+"class:`~asyncio.StreamReaderProtocol`., (Contribuido por Serhiy Storchaka "
+"en :issue:`39529`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1702
 msgid ""
@@ -3156,8 +3158,8 @@ msgid ""
 "doc:`high-level API <../library/asyncio-api-index>` following deprecation in "
 "Python 3.8.  The motivation behind this change is multifold:"
 msgstr ""
-"El parámetro ``loop`` se ha eliminado de la mayoría de :mod:`asyncio` \\ 's: "
-"doc: `API de alto nivel <../ library / asyncio-api-index>` después de la "
+"El parámetro ``loop`` se ha eliminado de la mayoría de :mod:`asyncio`\\ 's :"
+"doc:`API de alto nivel <../library/asyncio-api-index>` después de la "
 "desaprobación en Python 3.8. La motivación detrás de este cambio es múltiple:"
 
 #: ../Doc/whatsnew/3.10.rst:1824
@@ -3245,9 +3247,11 @@ msgid ""
 "functions in the :mod:`traceback` module have been renamed to *exc*. "
 "(Contributed by Zackery Spytz and Matthias Bussonnier in :issue:`26389`.)"
 msgstr ""
-"El *etype* parameters of the ASDF00, ASDF01, and ASDF02 functions in the "
-"ASDF03 module have been renamed to *exc*. (Contribuido por Zackery Spytz y "
-"Matthias Bussonnier en :issue:`26389`.)"
+"Los parámetros *etype* de las funciones :func:`~traceback."
+"format_exception`, :func:`~traceback.format_exception_only`, y :func:"
+"`~traceback.print_exception` en el módulo :mod:`traceback` han sido "
+"renombradas a *exc*. (Contribuido por Zackery Spytz y Matthias Bussonnier "
+"en :issue:`26389`.)"
 
 #: ../Doc/whatsnew/3.10.rst:1866
 msgid ""
@@ -3302,8 +3306,8 @@ msgid ""
 "doc:`high-level API <../library/asyncio-api-index>` following deprecation in "
 "Python 3.8."
 msgstr ""
-"El parámetro ``loop`` se ha eliminado de la mayoría de :mod:`asyncio` \\ 's: "
-"doc: `API de alto nivel <../ library / asyncio-api-index>` después de la "
+"El parámetro ``loop`` se ha eliminado de la mayoría de :mod:`asyncio`\\ 's :"
+"doc:`API de alto nivel <../ library / asyncio-api-index>` después de la "
 "desaprobación en Python 3.8."
 
 #: ../Doc/whatsnew/3.10.rst:1891
@@ -3404,7 +3408,7 @@ msgid ""
 msgstr ""
 "Para compilar un archivo con un nombre de archivo ``char *``, abra "
 "explícitamente el archivo, léalo y compile el resultado. Una forma de "
-"hacerlo es utilizando el módulo: py:mod:`io` con :c:func:"
+"hacerlo es utilizando el módulo :py:mod:`io` con :c:func:"
 "`PyImport_ImportModule`, :c:func:`PyObject_CallMethod`, :c:func:"
 "`PyBytes_AsString` y :c:func:`Py_CompileString`, como se muestra a "
 "continuación. (Se omiten las declaraciones y el manejo de errores). ::"
@@ -3775,7 +3779,7 @@ msgid ""
 "Add a new :c:data:`Py_TPFLAGS_DISALLOW_INSTANTIATION` type flag to disallow "
 "creating type instances. (Contributed by Victor Stinner in :issue:`43916`.)"
 msgstr ""
-"Agregue un nuevo indicador de tipo: c:data:"
+"Agregue un nuevo indicador de tipo :c:data:"
 "`Py_TPFLAGS_DISALLOW_INSTANTIATION` para no permitir la creación de "
 "instancias de tipo. (Contribuido por Victor Stinner en :issue:`43916`.)"
 
@@ -3785,7 +3789,7 @@ msgid ""
 "immutable type objects: type attributes cannot be set nor deleted. "
 "(Contributed by Victor Stinner and Erlend E. Aasland in :issue:`43908`.)"
 msgstr ""
-"Agregue un nuevo indicador de tipo: c:data:`Py_TPFLAGS_IMMUTABLETYPE` para "
+"Agregue un nuevo indicador de tipo :c:data:`Py_TPFLAGS_IMMUTABLETYPE` para "
 "crear objetos de tipo inmutables: los atributos de tipo no se pueden "
 "establecer ni eliminar. (Contribuido por Victor Stinner y Erlend E. Aasland "
 "en :issue:`43908`.)"
@@ -3913,9 +3917,9 @@ msgid ""
 "is set instead. (Contributed by Victor Stinner and Erlend E. Aasland in :"
 "issue:`43908`.)"
 msgstr ""
-"Utilice el indicador de tipo: c:data:`Py_TPFLAGS_IMMUTABLETYPE` para crear "
-"objetos de tipo inmutable. No confíe en: c:data:`Py_TPFLAGS_HEAPTYPE` para "
-"decidir si un objeto de tipo es mutable o no; compruebe si: c:data:"
+"Utilice el indicador de tipo :c:data:`Py_TPFLAGS_IMMUTABLETYPE` para crear "
+"objetos de tipo inmutable. No confíe en :c:data:`Py_TPFLAGS_HEAPTYPE` para "
+"decidir si un objeto de tipo es mutable o no; compruebe si :c:data:"
 "`Py_TPFLAGS_IMMUTABLETYPE` está configurado en su lugar. (Contribuido por "
 "Victor Stinner y Erlend E. Aasland en :issue:`43908`.)"
 
