Traduciendo entradas faltante de algunos archivos whatsnew (#1679)
* Traduciendo entradas faltante de algunos archivos whatsnew
* adaptar errores traducción

--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -1163,8 +1163,8 @@ msgid ""
 "(Contributed by Andrew Barnert and Ivan Levkivskyi in :issue:`25958`.)"
 msgstr ""
 "Ahora es posible establecer un :ref:`special method <specialnames>` en `` "
-"None`` to indicate that the corresponding operation is not available. For "
-"example, if a class sets :meth:`__iter__` en ``None``, la clase no es "
+"None`` para indicar que la operación correspondiente no está disponible. Por "
+"ejemplo, si una clase establece :meth:`__iter__` en ``None``, la clase no es "
 "iterable. (Contribuido por Andrew Barnert e Ivan Levkivskyi en: número: "
 "`25958`.)"
 
@@ -1602,6 +1602,12 @@ msgid ""
 "mod:`typing` module as :class:`typing.ContextManager`. (Contributed by Brett "
 "Cannon in :issue:`25609`.)"
 msgstr ""
+"La clase :class:`contextlib.AbstractContextManager` fue agregada para "
+"proveer una clase abstracta para gestores de contexto. Provee una "
+"implementación por defecto sensible para `__enter__()` que retorna ``self`` "
+"y deja un método abstracto `__exit__()`. Se ha agregado una clase "
+"coincidente al módulo :mod:`typing` como :class:`typing.ContextManager`. "
+"(Contribuido por Brett Cannon en :issue:`25609`.)"
 
 #: ../Doc/whatsnew/3.6.rst:971
 msgid "datetime"
@@ -2648,9 +2654,9 @@ msgid ""
 "and *stderr* streams. (Contributed by Steve Dower in :issue:`6135`.)"
 msgstr ""
 "El constructor :class:`subprocess.Popen` y todas las funciones que le pasan "
-"argumentos ahora aceptan flujos *encoding* and *errors* arguments. "
-"Specifying either of these will enable text mode for the *stdin*, *stdout* "
-"and *stderr*. (Contribuido por Steve Dower en :issue:`6135`.)"
+"argumentos ahora aceptan argumentos *encoding* y *errors*. Especificando "
+"alguno de ellos activará el modo texto para *stdin*, *stdout* y *stderr*. "
+"(Contribuido por Steve Dower en :issue:`6135`.)"
 
 #: ../Doc/whatsnew/3.6.rst:1507
 msgid "sys"
@@ -2984,6 +2990,11 @@ msgid ""
 "`warnings.WarningMessage` (contributed by Victor Stinner in :issue:`26568` "
 "and :issue:`26567`)."
 msgstr ""
+"También se ha agregado un nuevo atributo opcional *source* a la función :"
+"func:`warnings.warn_explicit` : el objeto destruído que lanzó un :exc:"
+"`ResourceWarning`. Un atributo *source* también se agregó a :class:`warnings."
+"WarningMessage` (aportado por Victor Stinner en :issue:`26568` y :issue:"
+"`26567`)."
 
 #: ../Doc/whatsnew/3.6.rst:1703
 msgid ""
