--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -3307,7 +3307,7 @@ msgid ""
 "Python 3.8."
 msgstr ""
 "El parámetro ``loop`` se ha eliminado de la mayoría de :mod:`asyncio`\\ 's :"
-"doc:`API de alto nivel <../ library / asyncio-api-index>` después de la "
+"doc:`API de alto nivel <../library/asyncio-api-index>` después de la "
 "desaprobación en Python 3.8."
 
 #: ../Doc/whatsnew/3.10.rst:1891
