--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 19:21+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/reference/simple_stmts.rst:6
@@ -850,6 +850,14 @@ msgid ""
 "the :attr:`__cause__` attribute. If the raised exception is not handled, "
 "both exceptions will be printed::"
 msgstr ""
+"La cláusula ``from`` se utiliza para el encadenamiento de excepciones: si se "
+"proporciona, el segundo *expression* debe ser otra clase o instancia de "
+"excepción. Si la segunda expresión es una instancia de excepción, se "
+"adjuntará a la excepción generada como el atributo :attr:`__cause__` (que se "
+"puede escribir). Si la expresión es una clase de excepción, se creará una "
+"instancia de la clase y la instancia de excepción resultante se adjuntará a "
+"la excepción generada como el atributo :attr:`__cause__`. Si no se maneja la "
+"excepción generada, se imprimirán ambas excepciones:"
 
 #: ../Doc/reference/simple_stmts.rst:617
 msgid ""
@@ -1391,7 +1399,6 @@ msgstr ""
 "keyword:`!global`."
 
 #: ../Doc/reference/simple_stmts.rst:955
-#, fuzzy
 msgid ""
 "Names listed in a :keyword:`global` statement must not be defined as formal "
 "parameters, or as targets in :keyword:`with` statements or :keyword:`except` "
