actualizando entrada nueva

--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -1406,7 +1406,8 @@ msgid ""
 "function definition, :keyword:`import` statement, or variable annotation."
 msgstr ""
 "Los nombres enumerados en una declaración :keyword:`global` no deben "
-"definirse como parámetros formales o en un objetivo de control de bucle :"
+"definirse como parámetros formales, o como destinos en declaraciones :"
+"keyword:`with` o cláusulas :keyword:`except`, o en una lista de destino :"
 "keyword:`for`, definición de :keyword:`class`, definición de función, "
 "declaración :keyword:`import` o anotación de variable."
 
