Finalizando archivos de tutorial

--- a/tutorial/appetite.po
+++ b/tutorial/appetite.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2019-05-06 17:18-0400\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/tutorial/appetite.rst:5
@@ -60,7 +60,6 @@ msgid "Python is just the language for you."
 msgstr "Python es justo el lenguaje para ti."
 
 #: ../Doc/tutorial/appetite.rst:22
-#, fuzzy
 msgid ""
 "You could write a Unix shell script or Windows batch files for some of these "
 "tasks, but shell scripts are best at moving around files and changing text "
@@ -69,13 +68,14 @@ msgid ""
 "draft program.  Python is simpler to use, available on Windows, macOS, and "
 "Unix operating systems, and will help you get the job done more quickly."
 msgstr ""
-"Podrías escribir un shell script de Unix o un fichero batch de Windows para "
-"alguna de estas tareas pero los shell scripts son mejores para mover "
-"ficheros y cambiar texto no para aplicaciones con interfaz gráfica o juegos. "
-"Podrías escribir un programa en C/C++/Java pero puede llevar mucho tiempo de "
-"desarrollo incluso para tener el primer borrador. Python es más simple de "
-"utilizar, disponible en los sistemas operativos Windows, Mac OS X y Unix y "
-"te ayudará a realizar el trabajo de forma más rápida."
+"Puede escribir un script de shell de Unix o archivos por lotes de Windows "
+"para algunas de estas tareas, pero los scripts de shell son mejores para "
+"mover archivos y cambiar datos de texto, no son adecuados para juegos o "
+"aplicaciones GUI. Podría escribir un programa C / C ++ / Java, pero puede "
+"llevar mucho tiempo de desarrollo obtener incluso un programa de primer "
+"borrador. Python es más fácil de usar, está disponible en los sistemas "
+"operativos Windows, macOS y Unix, y lo ayudará a hacer el trabajo más "
+"rápidamente."
 
 #: ../Doc/tutorial/appetite.rst:29
 msgid ""
