--- a/tutorial/datastructures.po
+++ b/tutorial/datastructures.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 19:49+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/tutorial/datastructures.rst:5
@@ -699,19 +699,17 @@ msgstr ""
 "contener cualquier operador, no sólo comparaciones."
 
 #: ../Doc/tutorial/datastructures.rst:662
-#, fuzzy
 msgid ""
 "The comparison operators ``in`` and ``not in`` check whether a value occurs "
 "(does not occur) in a sequence.  The operators ``is`` and ``is not`` compare "
 "whether two objects are really the same object.  All comparison operators "
 "have the same priority, which is lower than that of all numerical operators."
 msgstr ""
-"Los operadores de comparación ``in`` y ``not in`` verifican si un valor está "
-"(o no está) en una secuencia. Los operadores ``is`` e ``is not`` comparan si "
-"dos objetos son realmente el mismo objeto; esto es significativo sólo para "
-"objetos mutables como las listas.  Todos los operadores de comparación "
-"tienen la misma prioridad, la cual es menor que la de todos los operadores "
-"numéricos."
+"Los operadores de comparación ``in`` y ``not in`` verifican si un valor "
+"ocurre (no ocurre) en una secuencia. Los operadores ``is`` y ``is not`` "
+"comparan si dos objetos son realmente el mismo objeto. Todos los operadores "
+"de comparación tienen la misma prioridad, que es menor que la de todos los "
+"operadores numéricos."
 
 #: ../Doc/tutorial/datastructures.rst:667
 msgid ""
