--- a/tutorial/whatnow.po
+++ b/tutorial/whatnow.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2020-05-09 14:19+0200\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/tutorial/whatnow.rst:5
@@ -88,7 +88,6 @@ msgid "More Python resources:"
 msgstr "Más recursos sobre Python:"
 
 #: ../Doc/tutorial/whatnow.rst:33
-#, fuzzy
 msgid ""
 "https://www.python.org:  The major Python web site.  It contains code, "
 "documentation, and pointers to Python-related pages around the web.  This "
@@ -96,11 +95,11 @@ msgid ""
 "Japan, and Australia; a mirror may be faster than the main site, depending "
 "on your geographical location."
 msgstr ""
-"https://www.python.org: El mayor sitio web de Python. Contiene código, "
-"documentación, y enlaces a páginas web relacionadas con Python. Esta web "
-"está replicada en varios sitios alrededor del mundo, como Europa, Japón y "
-"Australia; una réplica puede ser más rápida que el sitio principal, "
-"dependiendo de tu localización geográfica."
+"https://www.python.org: el principal sitio web de Python. Contiene código, "
+"documentación y referencias a páginas relacionadas con Python en la web. "
+"Este sitio web se refleja en varios lugares del mundo, como Europa, Japón y "
+"Australia; un espejo puede ser más rápido que el sitio principal, "
+"dependiendo de su ubicación geográfica."
 
 #: ../Doc/tutorial/whatnow.rst:39
 msgid "https://docs.python.org:  Fast access to Python's  documentation."
