--- a/tutorial/floatingpoint.po
+++ b/tutorial/floatingpoint.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 19:49+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/tutorial/floatingpoint.rst:9
@@ -302,16 +302,15 @@ msgstr ""
 "1/3 pueden ser representados exactamente)."
 
 #: ../Doc/tutorial/floatingpoint.rst:160
-#, fuzzy
 msgid ""
 "If you are a heavy user of floating point operations you should take a look "
 "at the NumPy package and many other packages for mathematical and "
 "statistical operations supplied by the SciPy project. See <https://scipy."
 "org>."
 msgstr ""
-"Si sos un usuario frecuente de las operaciones de punto flotante deberías "
-"pegarle una mirada al paquete Numerical Python y otros paquetes para "
-"operaciones matemáticas y estadísticas provistos por el proyecto SciPy. Mirá "
+"Si es un gran usuario de operaciones de coma flotante, debería echar un "
+"vistazo al paquete NumPy y muchos otros paquetes para operaciones "
+"matemáticas y estadísticas suministrados por el proyecto SciPy. Consulte "
 "<https://scipy.org>."
 
 #: ../Doc/tutorial/floatingpoint.rst:164
