--- a/tutorial/venv.po
+++ b/tutorial/venv.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 19:44+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/tutorial/venv.rst:6
@@ -113,15 +113,14 @@ msgstr ""
 "ejecuta el módulo :mod:`venv` como script con la ruta a la carpeta::"
 
 #: ../Doc/tutorial/venv.rst:49
-#, fuzzy
 msgid ""
 "This will create the ``tutorial-env`` directory if it doesn't exist, and "
 "also create directories inside it containing a copy of the Python "
 "interpreter and various supporting files."
 msgstr ""
-"Esto creará la carpeta ``tutorial-env`` si no existe, y también creará las "
-"subcarpetas conteniendo la copia del intérprete Python, la librería estándar "
-"y los archivos de soporte."
+"Esto creará el directorio ``tutorial-env`` si no existe, y también creará "
+"directorios dentro de él que contienen una copia del intérprete de Python y "
+"varios archivos de soporte."
 
 #: ../Doc/tutorial/venv.rst:53
 msgid ""
@@ -175,29 +174,26 @@ msgid "Managing Packages with pip"
 msgstr "Manejando paquetes con pip"
 
 #: ../Doc/tutorial/venv.rst:95
-#, fuzzy
 msgid ""
 "You can install, upgrade, and remove packages using a program called :"
 "program:`pip`.  By default ``pip`` will install packages from the Python "
 "Package Index, <https://pypi.org>.  You can browse the Python Package Index "
 "by going to it in your web browser."
 msgstr ""
-"Puede instalar, actualizar, y eliminar paquetes usando un programa llamado :"
-"program:`pip`. De forma predeterminada ``pip`` instalará paquetes desde el "
+"Puede instalar, actualizar y eliminar paquetes usando un programa llamado: "
+"programa: `pip`. De forma predeterminada, ``pip`` instalará paquetes del "
 "índice de paquetes de Python, <https://pypi.org>. Puede navegar por el "
-"índice de paquetes de Python, yendo a él en su navegador web, o puede "
-"utilizar la herramienta de búsqueda limitada de  ``pip``:"
+"índice de paquetes de Python yendo a él en su navegador web."
 
 #: ../Doc/tutorial/venv.rst:100
-#, fuzzy
 msgid ""
 "``pip`` has a number of subcommands: \"install\", \"uninstall\", \"freeze\", "
 "etc.  (Consult the :ref:`installing-index` guide for complete documentation "
 "for ``pip``.)"
 msgstr ""
-"``pip`` tiene varios subcomandos: \"search\", \"install\", \"uninstall\", "
-"\"freeze\", etc.  (consulta la guía :ref:`installing-index` para la "
-"documentación completa de ``pip``.)"
+"``pip`` tiene varios subcomandos: \"instalar\", \"desinstalar\", \"congelar"
+"\", etc. (Consulte la guía :ref:`installing-index` para obtener la "
+"documentación completa de ``pip``)."
 
 #: ../Doc/tutorial/venv.rst:104
 msgid ""
