finalizando using/mac

--- a/using/mac.po
+++ b/using/mac.po
@@ -13,18 +13,17 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-08-02 19:57+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es_CO\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es_CO\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/using/mac.rst:6
-#, fuzzy
 msgid "Using Python on a Mac"
-msgstr "Usando Python en una Macintosh"
+msgstr "Usando Python en un Mac"
 
 #: ../Doc/using/mac.rst
 msgid "Author"
@@ -35,23 +34,21 @@ msgid "Bob Savage <bobsavage@mac.com>"
 msgstr "Bob Savage <bobsavage@mac.com>"
 
 #: ../Doc/using/mac.rst:11
-#, fuzzy
 msgid ""
 "Python on a Mac running macOS is in principle very similar to Python on any "
 "other Unix platform, but there are a number of additional features such as "
 "the IDE and the Package Manager that are worth pointing out."
 msgstr ""
-"Python en una Macintosh con Mac OS X es, en principio, muy similar a Python "
+"Python en una Mac que ejecuta macOS es, en principio, muy similar a Python "
 "en cualquier otra plataforma Unix, pero hay una serie de características "
 "adicionales como el IDE y el Administrador de paquetes que vale la pena "
-"resaltar."
+"señalar."
 
 #: ../Doc/using/mac.rst:18
 msgid "Getting and Installing MacPython"
 msgstr "Obteniendo e instalando MacPython"
 
 #: ../Doc/using/mac.rst:20
-#, fuzzy
 msgid ""
 "macOS since version 10.8 comes with Python 2.7 pre-installed by Apple.  If "
 "you wish, you are invited to install the most recent version of Python 3 "
@@ -59,11 +56,11 @@ msgid ""
 "binary\" build of Python, which runs natively on the Mac's new Intel and "
 "legacy PPC CPU's, is available there."
 msgstr ""
-"Mac OS X 10.8 viene con Python 2.7 preinstalado por Apple. Si lo desea, está "
-"invitado a instalar la versión más reciente de Python 3 desde el sitio web "
-"de Python (https://www.python.org). Allí está disponible una versión actual "
-"“binaria universal” de Python, que se ejecuta de forma nativa en las nuevas "
-"CPU Intel y PPC heredadas de Mac."
+"macOS desde la versión 10.8 viene con Python 2.7 preinstalado por Apple. Si "
+"lo desea, está invitado a instalar la versión más reciente de Python 3 desde "
+"el sitio web de Python (https://www.python.org). Allí está disponible una "
+"compilación \"binaria universal\" actual de Python, que se ejecuta de forma "
+"nativa en las nuevas CPU Intel y PPC heredadas de Mac."
 
 #: ../Doc/using/mac.rst:26
 msgid "What you get after installing is a number of things:"
@@ -136,18 +133,16 @@ msgid "How to run a Python script"
 msgstr "Cómo ejecutar un *script* de Python"
 
 #: ../Doc/using/mac.rst:57
-#, fuzzy
 msgid ""
 "Your best way to get started with Python on macOS is through the IDLE "
 "integrated development environment, see section :ref:`ide` and use the Help "
 "menu when the IDE is running."
 msgstr ""
-"Su mejor manera de comenzar a usar Python en Mac OS X es a través del "
-"entorno de desarrollo integrado IDLE, consulte la sección :ref:`ide` y use "
-"el menú Ayuda cuando se ejecute el IDE."
+"La mejor manera de comenzar con Python en macOS es a través del entorno de "
+"desarrollo integrado IDLE, consulte la sección :ref:`ide` y use el menú "
+"Ayuda cuando el IDE se está ejecutando."
 
 #: ../Doc/using/mac.rst:61
-#, fuzzy
 msgid ""
 "If you want to run Python scripts from the Terminal window command line or "
 "from the Finder you first need an editor to create your script. macOS comes "
@@ -160,14 +155,14 @@ msgid ""
 "aquamacs.org/)."
 msgstr ""
 "Si desea ejecutar scripts de Python desde la línea de comandos de la ventana "
-"de Terminal o desde Finder, primero necesita un editor para crear su script. "
-"Mac OS X viene con una serie de editores de línea de comandos estándar de "
-"Unix, :program:`vim` y :program:`emacs` entre ellos. Si desea un editor más "
-"parecido a Mac, :program:`BBEdit` o :program:`TextWrangler` de Bare Bones "
-"Software (consulte http://www.barebones.com/products/bbedit/index.html) son "
-"buenas opciones , ya que son :program:`TextMate` (consulte https://"
-"macromates.com/). Otros editores incluyen :program:`Gvim` (http://macvim-dev."
-"github.io/macvim/) y :program:`Aquamacs` (http://aquamacs.org/)."
+"de Terminal o desde el Finder, primero necesita un editor para crear su "
+"script. macOS viene con varios editores de línea de comandos estándar de "
+"Unix, entre ellos: program: `vim` y: program:` emacs`. Si desea un editor "
+"más parecido a Mac,: program: `BBEdit` o: program:` TextWrangler` de Bare "
+"Bones Software (consulte http://www.barebones.com/products/bbedit/index."
+"html) son buenas opciones , como está: programa: `TextMate` (ver https://"
+"macromates.com/). Otros editores incluyen: programa: `Gvim` (http://macvim-"
+"dev.github.io/macvim/) y: programa:` Aquamacs` (http://aquamacs.org/)."
 
 #: ../Doc/using/mac.rst:71
 msgid ""
@@ -206,18 +201,17 @@ msgid "Running scripts with a GUI"
 msgstr "Ejecutar scripts con una GUI"
 
 #: ../Doc/using/mac.rst:90
-#, fuzzy
 msgid ""
 "With older versions of Python, there is one macOS quirk that you need to be "
 "aware of: programs that talk to the Aqua window manager (in other words, "
 "anything that has a GUI) need to be run in a special way. Use :program:"
 "`pythonw` instead of :program:`python` to start such scripts."
 msgstr ""
-"Con versiones anteriores de Python, hay una peculiaridad de Mac OS X que "
-"debe conocer: los programas que hablan con el administrador de ventanas Aqua "
-"(en otras palabras, cualquier cosa que tenga una GUI) deben ejecutarse de "
-"una manera especial. Use :program:`pythonw` en vez de :program:`python` para "
-"comenzar tales scripts."
+"Con las versiones anteriores de Python, hay una peculiaridad de macOS que "
+"debe tener en cuenta: los programas que se comunican con el administrador de "
+"ventanas Aqua (en otras palabras, cualquier cosa que tenga una GUI) deben "
+"ejecutarse de una manera especial. Utilice: programa: `pythonw` en lugar de: "
+"programa:` python` para iniciar dichos scripts."
 
 #: ../Doc/using/mac.rst:95
 msgid ""
@@ -231,7 +225,6 @@ msgid "Configuration"
 msgstr "Configuración"
 
 #: ../Doc/using/mac.rst:101
-#, fuzzy
 msgid ""
 "Python on macOS honors all standard Unix environment variables such as :"
 "envvar:`PYTHONPATH`, but setting these variables for programs started from "
@@ -239,12 +232,12 @@ msgid ""
 "or :file:`.cshrc` at startup. You need to create a file :file:`~/.MacOSX/"
 "environment.plist`. See Apple's Technical Document QA1067 for details."
 msgstr ""
-"Python en OS X respeta todas las variables de entorno estándar de Unix como :"
-"envvar:`PYTHONPATH`, pero configurar estas variables para programas "
-"iniciados desde el Finder no es estándar ya que Finder no lee su :file:`."
-"profile` o :file:`.cshrc` al arranque. Usted necesita crear un nuevo "
-"archivo :file:`~/.MacOSX/environment.plist`. Consulte el documento técnico "
-"de Apple QA1067 para más detalles."
+"Python en macOS respeta todas las variables de entorno estándar de Unix, "
+"como :envvar:`PYTHONPATH`, pero la configuración de estas variables para los "
+"programas iniciados desde el Finder no es estándar, ya que el Finder no lee "
+"su :file:`.profile` o :file:`.cshrc` al inicio. Necesita crear un archivo :"
+"file:`~/.MacOSX/environment.plist`. Consulte el documento técnico QA1067 de "
+"Apple para obtener más detalles."
 
 #: ../Doc/using/mac.rst:108
 msgid ""
@@ -326,26 +319,24 @@ msgstr ""
 "incorporar desde la fuente."
 
 #: ../Doc/using/mac.rst:150
-#, fuzzy
 msgid ""
 "*wxPython* is another popular cross-platform GUI toolkit that runs natively "
 "on macOS. Packages and documentation are available from https://www.wxpython."
 "org."
 msgstr ""
-"*wxPython* es otro kit de herramientas GUI multiplataforma popular que se "
-"ejecuta de forma nativa en Mac OS X. Los paquetes y la documentación están "
-"disponibles en https://www.wxpython.org."
+"*wxPython* es otro popular kit de herramientas de interfaz gráfica de "
+"usuario multiplataforma que se ejecuta de forma nativa en macOS. Los "
+"paquetes y la documentación están disponibles en https://www.wxpython.org."
 
 #: ../Doc/using/mac.rst:153
-#, fuzzy
 msgid ""
 "*PyQt* is another popular cross-platform GUI toolkit that runs natively on "
 "macOS. More information can be found at https://riverbankcomputing.com/"
 "software/pyqt/intro."
 msgstr ""
-"*PyQt* es otro kit de herramientas GUI multiplataforma popular que se "
-"ejecuta de forma nativa en Mac OS X. Más información podrá ser encontrada en "
-"https://riverbankcomputing.com/software/pyqt/intro."
+"*PyQt* es otro popular kit de herramientas de interfaz gráfica de usuario "
+"multiplataforma que se ejecuta de forma nativa en macOS. Puede encontrar más "
+"información en https://riverbankcomputing.com/software/pyqt/intro."
 
 #: ../Doc/using/mac.rst:159
 msgid "Distributing Python Applications on the Mac"
